# CS5330

./: .gitignore  CS5330_Final_Presentation.pptx  Project Proposal.docx  README.md  config.py  dataset.py  inference_fps.py  metadata.yml  train.py
flow_branch/: CMakeLists.txt  extract_flow.cpp  flow_model.hpp  train_eval.cpp  train_flow_ucf101.py
models/: __init__.py  c3d.py  fusion.py  r3d18.py
